@@ -1,0 +1,3 @@
+More performance improvements in subset.
+
+Also, feature change regarging names on scalar results.
